[gd_scene load_steps=14 format=3 uid="uid://cotcgh0ugvira"]

[ext_resource type="Script" path="res://Scenes/bail_card_base.gd" id="1_mqsan"]
[ext_resource type="Script" path="res://Scenes/bail_card.gd" id="1_yxsg3"]
[ext_resource type="FontFile" uid="uid://sa61p83ombl0" path="res://fonts/Lexend/LexendDeca-Black.ttf" id="2_j3rkv"]
[ext_resource type="Texture2D" uid="uid://0384q68s1r2h" path="res://Art/GUI/Rope.png" id="2_xtnva"]
[ext_resource type="Texture2D" uid="uid://dm4vbehfyr3pc" path="res://Art/GUI/BailCard2.png" id="4_3bsf5"]
[ext_resource type="Shader" path="res://Scenes/bail_card.gdshader" id="4_cyoww"]
[ext_resource type="Texture2D" uid="uid://kxxh71dh2q0d" path="res://Art/GUI/BailCard2_success.png" id="4_t2a2p"]
[ext_resource type="Texture2D" uid="uid://bvl1bvdoui2x6" path="res://Art/GUI/BailCardOutline.png" id="5_x8xmv"]
[ext_resource type="Texture2D" uid="uid://c1bbaf8kxo12f" path="res://Art/GUI/RopeEnd.png" id="8_ti0ur"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sp3ix"]
friction = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_50y1r"]
shader = ExtResource("4_cyoww")
shader_parameter/border_color = Color(0, 0, 0, 1)
shader_parameter/border_glow_color = Color(0.984079, 0.832765, 0, 1)
shader_parameter/border_glow_amount = 0.0
shader_parameter/border_glow_strength = 1.5
shader_parameter/darken = 1.0
shader_parameter/border = ExtResource("5_x8xmv")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qlbmv"]
radius = 79.0
height = 220.0

[sub_resource type="CircleShape2D" id="CircleShape2D_giwof"]

[node name="BailCardBase" type="Node2D"]
z_index = 30
script = ExtResource("1_mqsan")

[node name="Rope" type="Line2D" parent="."]
texture_repeat = 2
points = PackedVector2Array(-46, -1, -1, 0)
width = 16.0
texture = ExtResource("2_xtnva")
texture_mode = 1
antialiased = true

[node name="BailCard" type="RigidBody2D" parent="."]
texture_filter = 1
position = Vector2(-146, 0)
collision_priority = 5.0
input_pickable = true
mass = 3.0
physics_material_override = SubResource("PhysicsMaterial_sp3ix")
freeze_mode = 1
script = ExtResource("1_yxsg3")
success_image = ExtResource("4_t2a2p")
normal_image = ExtResource("4_3bsf5")

[node name="BailCard" type="Sprite2D" parent="BailCard"]
texture_filter = 6
material = SubResource("ShaderMaterial_50y1r")
texture = ExtResource("4_3bsf5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BailCard"]
visible = false
z_index = 2
position = Vector2(-3, 0.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qlbmv")

[node name="Marker2D" type="Marker2D" parent="BailCard"]
position = Vector2(102, 0)

[node name="RichTextLabel" type="RichTextLabel" parent="BailCard"]
clip_contents = false
offset_left = -83.0
offset_top = -31.0
offset_right = 86.0
offset_bottom = 49.0
mouse_filter = 1
theme_override_constants/outline_size = 32
theme_override_fonts/normal_font = ExtResource("2_j3rkv")
theme_override_font_sizes/normal_font_size = 48
text = "BAIL"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RopeEnd" type="Sprite2D" parent="BailCard"]
texture_filter = 2
position = Vector2(93, -1)
texture = ExtResource("8_ti0ur")

[node name="PinJoint2D" type="DampedSpringJoint2D" parent="."]
position = Vector2(-46, 7.45058e-09)
rotation = -1.5677
node_a = NodePath("../BailCard")
node_b = NodePath("../Anchor")
bias = 0.043
rest_length = 4.0
stiffness = 46.0
damping = 0.98

[node name="Anchor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchor"]
shape = SubResource("CircleShape2D_giwof")

[connection signal="input_event" from="BailCard" to="BailCard" method="_on_input_event"]
[connection signal="mouse_entered" from="BailCard" to="BailCard" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BailCard" to="BailCard" method="_on_mouse_exited"]
